Overflow fix attempt #2
Please

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 button,
 .number {
   padding: 10px;
+  max-width: 15%;
   text-align: center;
   border: 1px solid #000;
   background-color: #f9f9f9;
@@ -22,6 +23,7 @@ button,
 #number-container {
   display: grid;
   margin: 0 auto;
+  height: 100%;
   grid-auto-rows: minmax(auto, 1fr);
 }
 
